  * Added option --fill-eit to "tstables" and plugin "tables".
  * In plugin "rmsplice", immediate splice events are no longer ignored.
  * Implement guidelines from ETSI TR 101 211 when compiling EIT's.
  * In XML descriptions of NIT and BAT, it is now possible to specify a
    preferred section index for each TS.

[BUG] Bug fixes:

  * In plugin "http", the option --receive-timeout was ignored.

-------------------------------------------------------------------------------

VERSION 3.15-1007

[NEW] New commands and plugins:

  * Added command "tsswitch", a TS input switcher with remote control.
  * Added command "tsgenecm", generate one ECM using any DVB SimulCrypt ECMG.
  * Added plugin "limit" to limit the global TS bitrate.
  * Added plugin "duplicate" to duplicate one or more PID's.
  * Added plugins "encap" and "decap" to encapsulate and decapsulate PID's
    into one single tunnel PID.

[IMP] Improvements on existing commands and plugins:

  * The plugin "fork" can now be used as input and output plugin as well. When
    used as an input plugin (new), it reads packets from the command output.
  * Added option --ignore-errors to "tsbitrate" and plugin "pcrbitrate".
  * Added option --receive-timeout to "tstabdump" and plugins "dektec" (input),
    "ip" (input), "mpeinject".
  * Added options --udp-size, --min-udp-size, --max-udp-size, --net-size,
    --min-net-size, --max-net-size to plugin "mpe".
  * Added option --network-id to plugin "nitscan".
  * Added option --strict-xml to "tstabcomp", "tstables" and plugin "tables".
  * Added option --max-packets to "tsdump".
  * The command "tsdump" can now accept multiple input files.
  * Added demodulator support in the input plugin "dektec" (e.g. DTA-2137).
  * Added options --audio-pid and --eit to plugin "zap".
  * Added option --sei-type to plugin "pes".
  * Added option --event-id to plugin "rmsplice".
  * Added the per-user configuration file $HOME/.tsduck to specify default or